modified by BRADLEY to test automatic rebuild

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome by SONGGK SONGGK SONGGK SONGGK
+welcome=Welcome by BRADLEY BRADLEY BRADLEY
 required=is required
 notFound=has not been found
 duplicate=is already in use
