set CRLF option on git

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome by  KAYRA KAYRA KAYRA KAYRA
+welcome=Welcome by WOW-WOW-WOW
 required=is required
 notFound=has not been found
 duplicate=is already in use
